--- a/index.css
+++ b/index.css
@@ -1,21 +1,32 @@
 body{
     background-color: beige;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
    
 }
 
+#main{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 h1{
     font-size: 40px;
-    margin-left: 40%;
-    margin-top: 10px;
+    /* margin-left: 40%;
+    margin-top: 10px; */
 }
 
 #container{
-    height:550px;
-    width: 520px;
+    height:500px;
+    width: 500px;
     background-color: aliceblue;
-    margin-left: 30%;
-    margin-bottom: 20%;
+    /* margin-left: 30%;
+    margin-bottom: 20%; */
     box-shadow: 2px 5px 10px 10px rgb(104, 102, 102);
+    display: flex;
+    flex-wrap: wrap;
+    
+    /* fix the issue with space between items */
+      /* align-content:flex-start;  */ 
+    
 }
